[button] fix text alignment for mobile (#4598)

--- a/packages/plugin-button/web/statics/styles/default-styles.scss
+++ b/packages/plugin-button/web/statics/styles/default-styles.scss
@@ -27,9 +27,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   font-family: var(--ricos-custom-p-font-family);
-  @include phone {
-    max-width: calc(100vw - 89px);
-  }
 }
 
 .button_size_content {
